service/tests/authentication/google/snapshots/test__authentication__google__complete__invalid_code.snap
---
source: tests/authentication/google/complete.rs
expression: res.headers()
---
HTTP/1.1 400 Bad Request
content-type: application/problem+json
