service/tests/authentication/google/snapshots/test__authentication__google__complete__missing_id_token-2.snap
---
source: tests/authentication/google/complete.rs
expression: res.to_json().unwrap()
---
{
  "detail": "Authentication failed with the authentication provider: ID Token was not present in response",
  "status": 400,
  "title": "Failed to authenticate user",
  "type": "tag:arkenstone,2020:authentication/problems/authentication_error"
}
