service/tests/authentication/google/snapshots/test__authentication__google__complete__no_code-2.snap
---
source: tests/authentication/google/complete.rs
expression: res.to_json().unwrap()
---
{
  "detail": "Authentication failed with the authentication provider: Missing required parameter: code",
  "status": 400,
  "title": "Failed to authenticate user",
  "type": "tag:arkenstone,2020:authentication/problems/authentication_error"
}
